# docdog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.MD  TEST.MD  build.sh  chunking.py  config.json  docdog_complete_log.txt  main.py  md_generator.py  process.py  pyproject.toml  reasoning.md  summarizer.py
.treeline_cache/: docdog.json
src/docdog/: chunking.py  main.py  mcp_tools.py  md_generator.py  summary_cache.py
src/docdog/templates/: initial_prompt.txt  reasoning_instructions.txt  validation_prompt.txt
src/docdog/utils/: sanitize_prompt.py
tests/: .coverage  README.md  test_sanitize_prompt.py  test_tools.py
